--- a/maintenance_project/package.json
+++ b/maintenance_project/package.json
@@ -10,6 +10,9 @@
     "build": "cross-env NODE_ENV=production browserify -g envify src/main.js | uglifyjs -c warnings=false -m > dist/build.js"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.0.0-rc.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9",
     "vue": "^2.0.1"
   },
   "devDependencies": {
