--- a/maintenance_project/.gitignore
+++ b/maintenance_project/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 node_modules/
-dist/build.js
+dist/
 npm-debug.log
 yarn-error.log
 
@@ -11,4 +11,3 @@ yarn-error.log
 *.njsproj
 *.sln
 package-lock.json
-
